# aoc19

./: .clang-format  .gitignore  .travis.yaml  CMakeLists.txt  Makefile
cmake/: googletest.cmake
day00/: CMakeLists.txt
day00/part00/: CMakeLists.txt  puzzle.cc  test.cc
day01/: CMakeLists.txt
day01/part01/: CMakeLists.txt  puzzle.cc
day01/part02/: CMakeLists.txt  puzzle.cc
day02/: CMakeLists.txt
day02/part01/: CMakeLists.txt  puzzle.cc
day02/part02/: CMakeLists.txt  puzzle.cc
day03/: CMakeLists.txt
day03/part01/: CMakeLists.txt  puzzle.cc
day03/part02/: CMakeLists.txt  puzzle.cc
day04/: CMakeLists.txt
day04/part01/: puzzle.cc
day04/part02/: CMakeLists.txt  puzzle.cc
day05/: CMakeLists.txt
day05/part01/: CMakeLists.txt  puzzle.cc
day05/part02/: puzzle.cc
day06/: CMakeLists.txt
day06/part01/: CMakeLists.txt  puzzle.cc
day06/part02/: CMakeLists.txt  puzzle.cc
day07/: CMakeLists.txt
day07/part01/: CMakeLists.txt  puzzle.cc
day07/part02/: CMakeLists.txt  puzzle.cc
day08/: CMakeLists.txt
day08/part01/: CMakeLists.txt  puzzle.cc
day08/part02/: CMakeLists.txt  puzzle.cc
